"updating margins for webpage content"

--- a/taskdawg/src/Components/ThreadPage/ThreadPage.css
+++ b/taskdawg/src/Components/ThreadPage/ThreadPage.css
@@ -1,5 +1,5 @@
 .thread-title-margins {
-    margin-top: 9%;
+    margin-top: 9vh;
     position: fixed; /* Fix the navbar to the top */
     top: 0; /* Align it to the top of the page */
     left: 0; /* Align to the left side of the page */
@@ -8,5 +8,9 @@
 }
 
 .thread-content {
-    margin-top: 35%;
+    margin-top: 40vh;
+}
+
+.thread-bottom-margin {
+    margin-bottom: 15vh;
 }
