--- a/taskdawg/src/Components/HelperSearchPage/HelperSearchPage.css
+++ b/taskdawg/src/Components/HelperSearchPage/HelperSearchPage.css
@@ -1,5 +1,5 @@
 .helperSearchBar {
-    margin-top: 13%;
+    margin-top: 14vh;
     position: fixed; /* Fix the navbar to the top */
     top: 0; /* Align it to the top of the page */
     left: 0; /* Align to the left side of the page */
@@ -18,6 +18,6 @@
 }
 
 .content-margin-search {
-    margin-bottom: 20%;
-    margin-top: 25%;
+    margin-top: 27vh;
+    margin-bottom: 17.5vh;
 }
